--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="etiquetas, html, tablas, listas, párrafos,selectores" >
   <meta name="description" content="Practica de etiquetas HTML5 y estilos de CSS3">
   <meta name="author" content="Nicolás Lagoria">
+  <link rel="stylesheet" href="./index.css">
   <title>Primer Web</title>
 </head>
 <body>
@@ -19,9 +20,9 @@
     </nav>
   </header>
   <main>
-    <article>
+    <section>
       <h1>Practica de HTML y CSS</h1>
-    </article>
+    </section>
     <article>
       <h2>Comenzamos nuestra primer web</h2>
       <p>Una página web básica creada con HTML y CSS es una página estática que muestra contenido e información sin funcionalidades interacticas o dinámicas. Aquí tienes una descripción básica de cómo se estructura una página web con HTML y se le da estilo con CSS:</p>
