--- a/pages/elementos.html
+++ b/pages/elementos.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="etiquetas, html, tablas, listas, párrafos,selectores" >
   <meta name="description" content="Practica de etiquetas HTML5 y estilos de CSS3">
   <meta name="author" content="Nicolás Lagoria">
+  <link rel="stylesheet" href="../index.css">
   <title>Primer Web</title>
 </head>
 <body>
@@ -21,6 +22,74 @@
   <main>
     <article>
       <h1>Practica de elementos HTML</h1>
+      <article>
+        <h2>Todos los niveles de la etiqueta h</h2>
+        <h2>Titutlo h2</h2>
+        <h3>Titutlo h3</h3>
+        <h4>Titutlo h4</h4>
+        <h5>Titutlo h5</h5>
+        <h6>Titutlo h6</h6>
+      </article>
+      <hr>
+      <article>
+        <h2>Elementos</h2>
+        <h3>Ejemplo de parrafo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repellat quo dolores deleniti atque assumenda similique nobis voluptate reiciendis, natus recusandae corporis veritatis magnam sed optio expedita consequuntur quae facere suscipit molestiae. Ratione, omnis. Voluptas quam nobis unde impedit odit fugit earum odio consequatur officia, in ducimus magnam blanditiis porro.</p>
+      </article>
+      <hr>
+      <article>
+        <h2>Listas</h2>
+        <h3>Herramientas de Frontend</h3>
+        <ul>
+          <li>Html</li>
+          <li>css</li>
+          <li>bootstrap</li>
+          <li>react</li>
+        </ul>
+        <h3>Herramientas de Backend</h3>
+        <ol>
+          <li>Nodejs</li>
+          <li>Express</li>
+          <li>Base de Datos</li>
+          <li>nodemon</li>
+        </ol>
+      </article>
+      <article>
+        <h2>Ejemplo de tablas</h2>
+        <hr>
+        <table>
+          <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Proyecto</th>
+            <th>Calificacion</th>
+          </tr>
+          <tr>
+            <td>Kakashi</td>
+            <td>Hatake</td>
+            <td>galeria</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Naruto</td>
+            <td>Uzumaki</td>
+            <td>galeria</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Sasuke</td>
+            <td>Uchiha</td>
+            <td>galeria</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>Sakura</td>
+            <td>Haruno</td>
+            <td>galeria</td>
+            <td>-</td>
+          </tr>
+        </table>
+      </article>
     </article>
     
 
