--- a/pages/flexbox.html
+++ b/pages/flexbox.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="etiquetas, html, tablas, listas, párrafos,selectores" >
   <meta name="description" content="Practica de etiquetas HTML5 y estilos de CSS3">
   <meta name="author" content="Nicolás Lagoria">
+  <link rel="stylesheet" href="../index.css">
   <title>Primer Web</title>
 </head>
 <body>
