--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="etiquetas, html, tablas, listas, párrafos,selectores" >
   <meta name="description" content="Practica de etiquetas HTML5 y estilos de CSS3">
   <meta name="author" content="Nicolás Lagoria">
-  <link rel="stylesheet" href="../index.css">
+  <link rel="stylesheet" href="../css/index.css">
   <title>Primer Web</title>
 </head>
 <body>
@@ -20,9 +20,9 @@
     </nav>
   </header>
   <main>
-    <article>
+    <section>
       <h1>Practica de formularios</h1>
-    </article>
+    </section>
     
 
 
