--- a/pages/elementos.html
+++ b/pages/elementos.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="../index.html">Inicio</a>
+      <a href="./inicio.html">Inicio</a>
       <a href="./elementos.html">Elementos</a>
       <a href="./contacto.html">Contacto</a>
       <a href="./flexbox.html">Flexbox</a>
