--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -20,7 +20,7 @@
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#opcionesMenu">
-        <span class="navbar-toggle-icon"></span> 
+        <span class="navbar-toggler-icon"></span> 
         </button>
 
       </div>
