agregando la page error

--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="Venta de insumos para impresiones 3d">
+  <meta name="keywords" content="filamento, resina, pla, petg, impresoras 3d">
+  <meta name="Author" content="Nicolas Lagoria">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <title>IMPREsionant3d</title>
 </head>
 <body>
-  
+  <header>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">IMPREsionant3d</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/error.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contactos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, fugiat porro laudantium ratione ab recusandae esse qui. Nulla, impedit cum animi a quia possimus asperiores? Eveniet rerum et laboriosam provident.</p></main>
+  <footer class="bg-dark text-light ">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 col-md-4 col-lg-3"> <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, omnis.</p></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci, voluptatibus?</p></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, optio.</p></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, veritatis?</p></div>
+      </div>
+      
+    </div>
+  </footer>
+  <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
